--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,7 +18,7 @@ classifiers = [
 dependencies = [
 	"numpy",
 	"enlighten",
-	"matplotlib ~= 3.6.2",
+	"matplotlib",
 	"openpyxl",
 	"pandas",
 	"scipy",
